2005-05-11  Alex Roitman  <shura@gramps-project.org>
	* INSTALL, NEWS, README, acinclude.m4, configure.in, doc/gramps.1.in,
	doc/gramps-manual/Makefile.am, doc/gramps-manual/C/*.xml,
	doc/gramps-manual/C/figures/*.png, src/AddSpouse.py, src/AddrEdit.py,
	src/AttrEdit.py, src/ChooseParents.py, src/Date.py, src/DateEdit.py,
	src/DbPrompter.py, src/DisplayModels.py, 
	src/EditPlace.py, src/EditSource.py, src/EventEdit.py,
	src/FamilyView.py, src/GenericFilter.py, src/GrampsBSDDB.py,
	src/GrampsGconfKeys.py, src/GrampsIniKeys.py, src/GrampsXMLDB.py,
	src/ImageSelect.py, src/Marriage.py, src/MergeData.py,
	src/MergePeople.py, src/NameEdit.py, src/PedView.py, src/PeopleModel.py,
	src/ReadGedcom.py, src/ReadXML.py, src/RelLib.py, src/ReportUtils.py,
	src/SourceView.py, src/StartupDialog.py, src/UrlEdit.py, src/Witness.py,
	src/WriteGedcom.py, src/WriteXML.py, src/gramps.glade,
	src/gramps_main.py, src/mergedata.glade, src/data/Makefile.am,
	src/data/gramps.schemas, src/data/tips.xml, src/dates/Date_fi.py,
	src/dates/Makefile.am, src/plugins/Check.py,
	src/plugins/FilterEditor.py, src/plugins/GraphViz.py,
	src/plugins/ImportGeneWeb.py, src/plugins/PatchNames.py,
	src/plugins/ReorderIds.py, src/plugins/ScratchPad.py,
	src/plugins/SoundGen.py, src/plugins/StatisticsChart.py,
	src/plugins/TestcaseGenerator.py, src/plugins/Verify.py,
	src/plugins/rel_es.py, src/po/da.po, src/po/de.po, src/po/es.po,
	src/po/fi.po, src/po/fr.po, src/po/nb.po, src/po/nl.po, src/po/no.po,
	src/po/ru.po, src/po/sv.po, src/po/template.po:
	Merge changes made in gramps20 into HEAD.

2005-05-10  Don Allingham  <don@gramps-project.org>
	* src/DbPrompter.py: add callback for progressbar
	* src/GrampsXMLDB.py: pass callback task
	* src/ReadXML.py: handle progress callback, fix placeobj error
	* src/gramps_main.py: define progress bar callback, remove problem
	filters

2005-05-10  Eero Tamminen  <eerot@sf>
	* src/plugins/StatisticsChart.po: add gettext _() to three strings
	  where it was missing
